[package]
name = "matchman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"

[dependencies.serenity]
version = "0.11.5"
default-features = true
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice"
]

[dependencies.tokio]
version = "1.24.1"
features = ["full"]